objects/vlocity_cmt__ContractVersionDiscountItem__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Category</label>
        <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
        <relationshipLabel>Contract Document Discount Items</relationshipLabel>
        <relationshipName>ContractVersionDiscountItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractVersionDiscountId__c</fullName>
        <label>Contract Document Discount</label>
        <referenceTo>vlocity_cmt__ContractVersionDiscount__c</referenceTo>
        <relationshipName>ContractVersionDiscountItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>ContractVersionDiscountItemsProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Document Discount Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Document Discount Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>